--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "node server",
     "server": "nodemon server",
     "client": "npm start --prefix client",
-    "ai": "flask run",
-    "dev": "concurrently \"npm run server\" \"npm run client\" \"npm run ai\""
+    "python": "flask run",
+    "dev": "concurrently \"npm run server\" \"npm run client\" \"npm run python\""
   },
   "author": "Sinan",
   "license": "ISC",
