--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,8 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "react-toastify": "^6.0.4"
+    "react-toastify": "^6.0.4",
+    "webpack": "^4.42.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,7 +41,6 @@
     "@babel/preset-react": "^7.9.4",
     "babel-loader": "^8.1.0",
     "http-proxy-middleware": "^1.0.4",
-    "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11"
   },
   "proxy": "http://localhost:5000"
