--- a/config.env
+++ b/config.env
@@ -1,4 +1,4 @@
 PORT=5000
-NODE_ENV=development
+NODE_ENV=production
 TRACK_API_URL=.api.riotgames.com/
-TRACKER_API_KEY=RGAPI-371fe2a0-1284-4490-8146-99466e19da18
+TRACKER_API_KEY=RGAPI-0c444dba-d792-48f3-96c9-ecf9376d7eed
