--- a/config.env
+++ b/config.env
@@ -1,4 +1,5 @@
 PORT=5000
-NODE_ENV=production
+NODE_ENV=development
 TRACK_API_URL=.api.riotgames.com/
-TRACKER_API_KEY=RGAPI-0c444dba-d792-48f3-96c9-ecf9376d7eed
+TRACKER_API_KEY=RGAPI-387548cb-e3ee-4204-8829-2fb5f8c05214
+GENERATE_SOURCEMAP=false
