--- a/config.env
+++ b/config.env
@@ -3,3 +3,4 @@ NODE_ENV=development
 TRACK_API_URL=.api.riotgames.com/
 TRACKER_API_KEY=RGAPI-387548cb-e3ee-4204-8829-2fb5f8c05214
 GENERATE_SOURCEMAP=false
+NODE_PATH=src/
