--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 PORT=5000
-NODE_ENV=development
+NODE_ENV=production
 TRACK_API_URL=.api.riotgames.com/
-TRACKER_API_KEY=RGAPI-387548cb-e3ee-4204-8829-2fb5f8c05214
+TRACKER_API_KEY=RGAPI-aae51987-356a-41e0-822f-9cb60233f4a7
 GENERATE_SOURCEMAP=false
 NODE_PATH=src/
