--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.1",
+    "react": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "requirejs-babel": "0.0.9"
   }
